<resources>
    <string name="app_name">Guess</string>
    <string name="action_settings">Settings</string>
    <string name="palpite">Guess</string>
    <string name="ErroPalpite">Insert a value between 1 and 10</string>
    <string name="numero_a_adivinhar">Try to guess the number im thinking (between 1 and 10)</string>
    <string name="numero_maior">"The number im thinking of is bigger than "</string>
    <string name="tente_novamente">. Try Again</string>
    <string name="numero_menor">"The number im thinking of is smaller than "</string>
    <string name="snackBar_advinha">Action</string>
    <string name="jogar_novamente">Would you like to play again?</string>
    <string name="novo_jogo">New Game</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="parabens">Congratulations you\'ve won</string>
    <string name="Certeza">Are you sure you want to start a new game?</string>
    <string name="title_activity_estatisticas">StatisticsActivity</string>
    <string name="jogos">Games</string>
    <string name="n_jogos">Games Played</string>
    <string name="victorias">Victories</string>
    <string name="victorias_percent">Victories (%)</string>
    <string name="tentativas">Attempts</string>
    <string name="minimo">Minimum</string>
    <string name="maximo">Maximum</string>
    <string name="media">Mean</string>
</resources>
